fix: select overflow

--- a/src/styles/objects/_atom.select.scss
+++ b/src/styles/objects/_atom.select.scss
@@ -108,7 +108,6 @@
       box-shadow: shadows.$elevation-4;
       background-color: colors.$color-white;
       border: solid 1px colors.$color-brand-gray-400;
-      overflow: hidden;
     }
 
     &__option {
